[Media Router] Return NotFoundError on dialog exit if appropriate

The MR dialog will always be opened when starting a PresentationRequest,
even if there are no sinks that support the presentation url.  The
default cast mode will then be some form of mirroring.  This means that
whether the user selects a device in the dialog or not, the promise from
start() will be rejected with an AbortError.  Instead, a NotFoundError
should be used if there were no devices which supported the presentation
url.

BUG=621161

Review-Url: https://codereview.chromium.org/2108973002
Cr-Commit-Position: refs/heads/master@{#403336}

Former-commit-id: 21d9a27daad3d0f6c3a9ad15818a099c728a3b3c