chrome/browser/ui/webui/media_router/media_router_ui.h
@@ -155,7 +155,9 @@ class MediaRouterUI : public ConstrainedWebDialogUI,
 
   void InitForTest(MediaRouter* router,
                    content::WebContents* initiator,
-                   MediaRouterWebUIMessageHandler* handler);
+                   MediaRouterWebUIMessageHandler* handler,
+                   std::unique_ptr<CreatePresentationConnectionRequest>
+                       create_session_request);
 
  private:
   FRIEND_TEST_ALL_PREFIXES(MediaRouterUITest, SortedSinks);
